# blackbox-log

./: .gitattributes  .gitignore  .gitmodules  .justfile  .typos.toml  CHANGELOG.md  Cargo.min.toml  Cargo.toml  Cranky.toml  Justfile  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: config  config.toml
.devcontainer/: Dockerfile  cargo-binstall.sh  devcontainer.json
.devcontainer/default/: Dockerfile  devcontainer.json
.devcontainer/default-prebuilt/: devcontainer.json
.github/: dependabot.yaml  renovate.json  renovate.json5
.github/workflows/: ci.yaml  devcontainer.yaml  pages.index.html  pages.yaml
.helix/: languages.toml
bbl2csv/: .justfile  Cargo.toml  README.md  rust-toolchain.toml
bbl2csv/src/: cli.rs  main.rs
benches/: decode.rs  parse.rs  read.rs
blackbox/: Cargo.toml
blackbox-log/: Cargo.min.toml  Cargo.toml  README.md
blackbox-log-cli/: Cargo.toml  README.md
blackbox-log-cli/src/: cli.rs  main.rs
blackbox-log-js/: .eslintrc.yaml  .gitignore  .justfile  .prettierrc.toml  .typos.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
blackbox-log-js/src/: blackbox-log.wasm  common.ts  data.ts  file.ts  headers.ts  log.ts  main.ts  parser.ts  slim.ts  str.ts  utils.ts  wasm.ts
blackbox-log-js/wasm/: .justfile  Cargo.toml  rustfmt.toml
blackbox-log-js/wasm/src/: lib.rs  macros.rs
blackbox-log-wasm/: .env  .justfile  Cargo.toml  rust-toolchain.toml
blackbox-log-wasm/.cargo/: config.toml
blackbox-log-wasm/src/: borrowing.rs  data.rs  ffi.rs  file.rs  headers.rs  lib.rs  log.rs  macros.rs  owned_slice.rs  panic.rs  shared.rs  str.rs
blackbox-log/benches/: decode.rs  headers.rs  parse.rs
blackbox-log/src/: betaflight.rs  common.rs  data.rs  event.rs  file.rs  filter.rs  headers.rs  lib.rs  log.rs  predictor.rs  prelude.rs  reader.rs  units.rs  utils.rs
blackbox-log/src/frame/: gps.rs  gps_home.rs  main.rs  mod.rs  slow.rs  trace_field.rs
blackbox-log/src/parser/: headers.rs  mod.rs  predictor.rs  reader.rs
blackbox-log/src/parser/data/: event.rs  mod.rs
blackbox-log/src/parser/decode/: mod.rs  negative_14_bit.rs  tagged_16.rs  tagged_32.rs  tagged_variable.rs  variable.rs
blackbox-log/src/parser/frame/: gps.rs  gps_home.rs  main.rs  mod.rs  slow.rs  trace_field.rs
blackbox-log/tests/: .gitattributes  msrv.rs  snapshots.rs
blackbox-log/tests/logs/: .gitattributes  .gitignore  LOG00004.TXT  LOG00007.BFL  LOG00037.BFL  btfl_all.bbl  crashing-LOG00002.BFL  error-recovery.01.csv  error-recovery.bbl  fc-blackbox  gimbal-ghost
blackbox-log/tests/logs/fc-blackbox/: LOG00002.BFL  btfl_001.bbl  btfl_002.bbl
blackbox-log/tests/logs/gimbal-ghost/: LOG00001.BFL  btfl_001.bbl
blackbox-log/tests/snapshots/: snapshots__fc_blackbox@LOG00002.BFL.snap  snapshots__fc_blackbox@LOG00004.TXT.snap  snapshots__fc_blackbox@LOG00007.BFL.snap  snapshots__fc_blackbox@LOG00037.BFL.snap  snapshots__fc_blackbox@btfl_001.bbl.snap  snapshots__fc_blackbox@btfl_002.bbl.snap  snapshots__fc_blackbox@btfl_all.bbl.snap  snapshots__fc_blackbox@crashing-LOG00002.BFL.snap  snapshots__gimbal_ghost@LOG00001.01.csv.snap  snapshots__gimbal_ghost@LOG00001.BFL.snap  snapshots__gimbal_ghost@btfl_001.bbl.snap  snapshots__gimbal_ghost@btfl_002.bbl.snap  snapshots__gimbal_ghost@emuf_001.bbl.snap  snapshots__own.snap  snapshots__own@error-recovery.bbl.snap  snapshots__snapshot@LOG00002.BFL.snap  snapshots__snapshot@LOG00037.BFL.snap  snapshots__snapshot@btfl_001.bbl.snap  snapshots__snapshot@crashing-LOG00002.BFL.snap  snapshots__snapshot@error-recovery.bbl.snap
blackbox-sys/: Cargo.toml  build.rs
blackbox-sys/src/: lib.rs  parser.rs  stream.rs
blackbox/benches/: decode.rs
blackbox/src/: betaflight.rs  common.rs  log.rs
blackbox/src/parser/: headers.rs  mod.rs  predictor.rs  reader.rs
blackbox/src/parser/data/: event.rs  mod.rs
blackbox/src/parser/decode/: elias_delta.rs  mod.rs  negative_14_bit.rs  tagged_16.rs  tagged_variable.rs
blackbox/src/parser/frame/: gps.rs  gps_home.rs  main.rs  mod.rs  slow.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  units.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs
codegen/src/type_def/: enum.rs  flag_set.rs  mod.rs
fuzz/: Cargo.toml
fuzz/artifacts/file/: minimized-from-20ed2a79e65591296de32d10c2a696fa15c2f7b8
fuzz/fuzz_targets/: elias_delta.rs  elias_delta_signed.rs  file.rs  i32_elias_delta.rs  ivar.rs  negative_14_bit.rs  tagged_16.rs  tagged_16_v1.rs  tagged_16_v2.rs  tagged_32.rs  tagged_variable.rs  u32_elias_delta.rs  uvar.rs  variable.rs  variable_signed.rs
fuzz/src/: lib.rs
fuzzing/: Cargo.toml
fuzzing/src/: lib.rs
reference-impl/: Cargo.toml  build.rs
reference-impl/src/: lib.rs  negative_14_bit.c  stream.rs  tools.rs
src/: betaflight.rs  common.rs  data.rs  data_v2.rs  encoding.rs  event.rs  file.rs  filter.rs  headers.rs  headers_v2.rs  inav.rs  lib.rs  log.rs  main.rs  predictor.rs  prelude.rs  reader.rs  units.rs  utils.rs
src/data_v2/: context.rs  history.rs  mod.rs
src/encoding/: elias_delta.rs  mod.rs  negative_14_bit.rs  tagged_16.rs  tagged_32.rs  variable.rs
src/frame/: gps.rs  gps_home.rs  main.rs  mod.rs  slow.rs  trace_field.rs
src/headers_v2/: frame_defs.rs  mod.rs
src/low_level/: headers.rs  mod.rs
src/parser/: headers.rs  mod.rs  predictor.rs  reader.rs
tests/: msrv.rs  readme_msrv_badge.rs  snapshots.rs  v2.rs
tests/logs/: error-recovery.bbl  fc-blackbox  gimbal-ghost
tests/snapshots/: snapshots__fc_blackbox@LOG00002.BFL.snap  snapshots__fc_blackbox@LOG00004.TXT.snap  snapshots__fc_blackbox@LOG00007.BFL.snap  snapshots__fc_blackbox@LOG00037.BFL.snap  snapshots__fc_blackbox@btfl_001.bbl.snap  snapshots__fc_blackbox@btfl_002.bbl.snap  snapshots__fc_blackbox@btfl_all.bbl.snap  snapshots__fc_blackbox@crashing-LOG00002.BFL.snap  snapshots__gimbal_ghost@FPV DRONE-2025-02-26-221920.csv.snap  snapshots__gimbal_ghost@LOG00001.BFL.snap  (+5 more)
types/: debug_mode.yaml  disabled_fields.yaml  failsafe_phase.yaml  features.yaml  flight_mode.yaml  pwm_protocol.yaml  state.yaml
xtask/: Cargo.toml
xtask/src/: main.rs
(+107 files in other folders)
