[workspace]
members = [".", "fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.66"

[package]
name = "blackbox-log"
version = "0.2.0"
description = "Ergonomic parser for BetaFlight blackbox logs"
repository = "https://github.com/blackbox-log/blackbox-log"
readme = "README.md"
categories = ["aerospace::drones", "aerospace::unmanned-aerial-vehicles", "parser-implementations", "no-std", "encoding"]
keywords = ["betaflight", "blackbox"]

include = ["/src/**/*", "/tests/snapshots.rs", "/benches/parse.rs", "/README.md"]

license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["memchr/std", "serde?/std", "uom/std"]
serde = ["dep:serde", "hashbrown/serde", "uom/use_serde"]

[dependencies]
bitvec = { version = "^1.0.0", default-features = false }
hashbrown = "^0.13.1"
memchr = { version = "^2.4.0", default-features = false }
serde = { version = "^1.0.96", default-features = false, features = ["alloc", "derive"], optional = true }
tracing = { version = "^0.1.16", default-features = false, features = ["attributes"] }
uom = { version = "^0.33.0", default-features = false, features = ["si", "f64"] }

[dev-dependencies]
criterion = { version = "^0.4", features = ["html_reports"] }
insta = { version = "^1.26", default-features = false, features = ["colors", "glob", "ron"] }
test-case = "^2.2.2"

[build-dependencies]
glob = "0.3.1"
heck = "0.4.0"
proc-macro2 = { version = "1.0.50", default-features = false }
quote = "1.0.23"
serde = { version = "^1.0.96", features = ["derive"] }
serde_yaml = "0.9.17"
syn = "1.0.107"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[lib]
bench = false

[[bench]]
name = "parse"
harness = false

[[test]]
name = "snapshots"
required-features = ["serde"]
