[workspace]
members = [".", "codegen", "fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.66"

[package]
name = "blackbox-log"
version = "0.3.2"
description = "Ergonomic parser for BetaFlight blackbox logs"
repository = "https://github.com/blackbox-log/blackbox-log"
readme = "README.md"
categories = ["aerospace::drones", "aerospace::unmanned-aerial-vehicles", "parser-implementations", "no-std", "encoding"]
keywords = ["betaflight", "blackbox"]

include = ["/src/**/*", "/tests/snapshots.rs", "/benches/parse.rs", "/README.md"]

license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["memchr/std", "serde?/std", "uom/std"]
_serde = ["dep:serde"]

[dependencies]
bitvec = { version = "^1.0.0", default-features = false }
hashbrown = ">=0.12.0, <0.15.0"
memchr = { version = "^2.4.0", default-features = false }
serde = { version = "^1.0.96", default-features = false, features = ["alloc", "derive"], optional = true }
time = { version = "^0.3.3", default-features = false, features = ["macros", "parsing"] }
tracing = { version = "^0.1.16", default-features = false, features = ["attributes"] }
uom = { version = ">=0.34.0, <0.36.0", default-features = false, features = ["si", "f64"] }

[dev-dependencies]
criterion = { version = "^0.5.1", features = ["html_reports"] }
insta = { version = "^1.32.0", default-features = false, features = ["colors", "glob", "ron"] }
test-case = "^3.2.1"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[lib]
bench = false

[[bench]]
name = "parse"
harness = false

[[test]]
name = "snapshots"
required-features = ["_serde"]
