[package]
name = "bbl2csv"
version = "0.1.0"
description = "Ergonomic cli for parsing BetaFlight blackbox logs into csv"
repository = "https://github.com/wetheredge/blackbox"
readme = "README.md"
categories = ["aerospace::drones", "aerospace::unmanned-aerial-vehicles", "command-line-utilities", "parser-implementations"]
keywords = ["blackbox_decode", "betaflight", "blackbox"]

license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
path = "src/main.rs"
name = "bbl2csv"

[dependencies]
blackbox-log.workspace = true
exitcode = "1.1.2"
lexopt = "0.2.1"
mimalloc = { version = "0.1.34", default-features = false }
rayon = "1.6.1"
tracing = { version = "0.1.37", default-features = false, features = ["release_max_level_debug"] }

[dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = ["smallvec", "fmt", "ansi", "std"]
