[package]
name = "blackbox-log-cli"
version = "0.1.0"
description = "Ergonomic cli for parsing BetaFlight blackbox logs"
repository = "https://github.com/wetheredge/blackbox"
categories = ["command-line-utilities", "parser-implementations"]
keywords = ["blackbox_decode", "betaflight", "blackbox"]

license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
path = "src/main.rs"
name = "blackbox-log"

[dependencies]
blackbox-log.workspace = true
exitcode = "1.1.2"
lexopt = "0.2.1"
mimalloc = { version = "0.1.32", default-features = false }
rayon = "1.6.0"
tracing = { version = "0.1.37", default-features = false, features = ["release_max_level_debug"] }

[dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = ["smallvec", "fmt", "ansi", "std"]
