[package]
name = "blackbox-log"
version = "0.1.0"
publish = false

license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["memchr/std", "serde?/std", "uom/std"]
serde = ["dep:serde", "uom/use_serde"]

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
memchr = { version = "2.5.0", default-features = false }
serde = { workspace = true, optional = true }
tracing.workspace = true
uom = { version = "0.33.0", default-features = false, features = ["si", "f64"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
insta = { version = "1.21.0", default-features = false, features = ["colors", "glob", "ron"] }
test-case = "2.2.2"

[lib]
bench = false

[[bench]]
name = "decode"
harness = false

[[test]]
name = "snapshots"
required-features = ["serde"]
