[package]
name = "blackbox_decode"
description = "Rust port of Nicholas Sherlock's blackbox_decode"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"
publish = false

[dependencies]
blackbox = { version = "0.1.0", path = ".." }
clap = { version = "3.2.22", features = ["derive", "wrap_help"] }
tracing = { version = "0.1.36", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["smallvec", "fmt", "ansi", "std"] }
