[package]
name = "blackbox_decode"
description = "Rust port of Nicholas Sherlock's blackbox_decode"
version = "0.1.0"
publish = false

license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
blackbox-log.workspace = true
bpaf.workspace = true
exitcode = "1.1.2"
mimalloc = { version = "0.1.32", default-features = false }
rayon = "1.5.3"
tracing = { workspace = true, features = ["release_max_level_debug"] }

[dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = ["smallvec", "fmt", "ansi", "std"]
