[package]
name = "codegen"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true

[dependencies]
glob = "0.3.1"
heck = "0.5.0"
proc-macro2 = { version = "1.0.79", default-features = false }
quote = "1.0.35"
serde = { version = "^1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
syn = { version = "2.0.53", features = ["full"] }
