[package]
name = "codegen"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true

[dependencies]
glob = "0.3.1"
heck = "0.5.0"
proc-macro2 = { version = "1.0.81", default-features = false }
quote = "1.0.36"
serde = { version = "^1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
syn = { version = "2.0.60", features = ["full"] }

[lints]
workspace = true
