[package]
name = "blackbox-fuzz"
version = "0.0.0"
publish = false

license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.2.0", features = ["derive"] }
blackbox-sys = { version = "0.1.0", path = "../blackbox-sys" }
blackbox-log.workspace = true
libfuzzer-sys = "0.4.5"
memfile = "0.2.1"

[lib]
test = false
bench = false
doc = false

[[bin]]
name = "no-panic"
test = false
bench = false
doc = false

[[bin]]
name = "variable-signed"
test = false
bench = false
doc = false

[[bin]]
name = "variable"
test = false
bench = false
doc = false

[[bin]]
name = "tagged-variable"
test = false
bench = false
doc = false

[[bin]]
name = "tagged-16"
test = false
bench = false
doc = false

[[bin]]
name = "tagged-32"
test = false
bench = false
doc = false

[[bin]]
name = "negative-14-bit"
test = false
bench = false
doc = false

[[bin]]
name = "electric-potential"
test = false
bench = false
doc = false
