[package]
name = "fuzz"
version = "0.0.0"
publish = false

license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
blackbox-log.path = ".."
libfuzzer-sys = "0.4.7"

[lib]
test = false
bench = false
doc = false

[[bin]]
name = "no-panic"
test = false
bench = false
doc = false
