[package]
name = "fuzzing"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"
publish = false

[dependencies]
biterator = { version = "0.1.0", path = "../../biterator" }
blackbox = { version = "0.1.0", path = ".." }
honggfuzz = "0.5.55"
memfile = "0.2.1"
reference-impl = { version = "0.1.0", path = "../reference-impl" }
