[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.5.4", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
xshell = "0.2.2"
