[workspace]

[package]
name = "blackbox-log-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.blackbox-log]
version = "0.1.0"
# git = "https://github.com/blackbox-log/blackbox-log"
path = "../../blackbox-log"

[profile.bench]
strip = false
debug = true
debug-assertions = false

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
